--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/node": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "@types/node": "^22.10.4",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "commander": "^12.1.0",
+    "commander": "^13.0.0",
     "yoctocolors": "^2.1.1"
   }
 }
