--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wut",
-  "description": "web update tool",
+  "description": "Web Update Tool",
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/node": "^22.10.4",
+    "@types/node": "^22.10.5",
     "typescript": "^5.7.2"
   },
   "dependencies": {
