--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/node": "^22.10.5",
-    "typescript": "^5.7.2"
+    "@types/bun": "^1.1.17",
+    "@types/node": "^22.10.7",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "commander": "^13.0.0",
