--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "wut",
   "description": "Web Update Tool",
-  "module": "index.ts",
   "type": "module",
-  "devDependencies": {
-    "@types/bun": "^1.1.17",
-    "@types/node": "^22.10.7",
-    "typescript": "^5.7.3"
-  },
   "dependencies": {
-    "commander": "^13.0.0",
+    "commander": "^13.1.0",
     "yaml": "^2.7.0",
     "yoctocolors": "^2.1.1"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@types/bun": "^1.2.2",
+    "@types/node": "^22.13.1"
+  },
+  "peerDependencies": {
+    "typescript": "^5.7.3"
   }
 }
