--- a/biome.json
+++ b/biome.json
@@ -1,41 +1,32 @@
 {
-	"files": {
-		"ignore": ["**/types/*.ts", "**/*types.ts"]
-	},
-	"formatter": {
-		"indentStyle": "space"
-	},
-	"javascript": {
-		"formatter": {
-			"arrowParentheses": "asNeeded",
-			"jsxQuoteStyle": "single",
-			"quoteProperties": "asNeeded",
-			"quoteStyle": "single",
-			"semicolons": "asNeeded",
-			"trailingCommas": "all"
-		},
-		"jsxRuntime": "transparent"
-	},
-	"json": {
-		"formatter": {
-			"trailingCommas": "all"
-		},
-		"parser": {
-			"allowComments": true,
-			"allowTrailingCommas": true
-		}
-	},
-	"overrides": [
-		{
-			"include": ["*.svelte", "*.astro", "*.vue"],
-			"linter": {
-				"rules": {
-					"style": {
-						"useConst": "off",
-						"useImportType": "off"
-					}
-				}
-			}
-		}
-	]
+  "files": {
+    "ignore": ["bun.lock", "**/types/*.ts", "**/*types.ts"]
+  },
+  "formatter": {
+    "indentStyle": "space"
+  },
+  "javascript": {
+    "formatter": {
+      "arrowParentheses": "asNeeded",
+      "jsxQuoteStyle": "single",
+      "quoteProperties": "asNeeded",
+      "quoteStyle": "single",
+      "semicolons": "asNeeded",
+      "trailingCommas": "all"
+    },
+    "jsxRuntime": "transparent"
+  },
+  "overrides": [
+    {
+      "include": ["*.svelte", "*.astro", "*.vue"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useConst": "off",
+            "useImportType": "off"
+          }
+        }
+      }
+    }
+  ]
 }
