--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "description": "Web Update Tool",
   "type": "module",
   "dependencies": {
-    "commander": "^13.1.0",
-    "yaml": "^2.7.0",
-    "yoctocolors": "^2.1.1"
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/bun": "^1.2.4",
-    "@types/node": "^22.13.5"
+    "@types/node": "^22.13.9"
   },
   "peerDependencies": {
-    "typescript": "^5.7.3"
-  }
+    "typescript": "^5.8.2"
+  },
+  "trustedDependencies": [
+    "@biomejs/biome"
+  ]
 }
