--- a/docker/srv.yaml
+++ b/docker/srv.yaml
@@ -8,7 +8,7 @@ services:
     # tty: true
     environment:
       - PORT=9000
-    hostname: wut-web
+    hostname: wut-srv
     image: docker.io/oven/bun:latest
     ports:
       - '9000:9000/tcp'
