--- a/biome.json
+++ b/biome.json
@@ -1,6 +1,6 @@
 {
   "files": {
-    "ignore": ["bun.lock", "**/types/*.ts", "**/*types.ts"]
+    "includes": ["**", "!**/bun.lock", "!**/types/**/*.ts", "!**/*types.ts"]
   },
   "formatter": {
     "indentStyle": "space"
@@ -18,15 +18,23 @@
   },
   "overrides": [
     {
-      "include": ["*.svelte", "*.astro", "*.vue"],
-      "linter": {
-        "rules": {
-          "style": {
-            "useConst": "off",
-            "useImportType": "off"
-          }
-        }
+      "includes": ["**/*.svelte", "**/*.astro", "**/*.vue"]
+    }
+  ],
+  "linter": {
+    "rules": {
+      "style": {
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       }
     }
-  ]
+  }
 }
